Fix bug can not full screen on ios

--- a/lms/src/views/Learn/Learn.css
+++ b/lms/src/views/Learn/Learn.css
@@ -268,6 +268,7 @@ a.learn-fill-div:hover {
     margin-bottom: 5px;
     white-space: pre-line;
     line-height: 150%;
+    overflow-y: auto;
 }
   
 .learn-lab-content-link button {
